--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -1,21 +1,25 @@
 * {
   margin: 0;
+  font-family: $font-main;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
-  font-family: 'Noto Sans KR', sans-serif;
 }
 
 html {
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: $font-main;
+  font-size: $font-size-16;
 }
 body {
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: $font-main;
+  color: $primary;
 }
 h1 {
   margin: 0;
 }
 a {
-  text-decoration: none;
   color: inherit;
+  text-decoration: none;
 }
 button,
 input,
