--- a/styles/main.scss
+++ b/styles/main.scss
@@ -15,5 +15,6 @@
 @import './modules/avatars';
 @import './modules/star-ratings';
 @import './modules/buttons';
+@import './modules/forms';
 
 @import './layouts/grids';
