--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,5 +16,6 @@
 @import './modules/star-ratings';
 @import './modules/buttons';
 @import './modules/forms';
+@import './modules/pagination';
 
 @import './layouts/grids';
