--- a/styles/base/_globals.scss
+++ b/styles/base/_globals.scss
@@ -31,6 +31,11 @@
   }
 }
 
+.sm-hidden {
+  @media screen and (max-width: $md-breakpoint - 1) {
+    display: none !important;
+  }
+}
 .md-hidden {
   @media screen and (min-width: $md-breakpoint) and (max-width: $md-breakpoint -1) {
     display: none !important;
