--- a/styles/mixins/_responsive.scss
+++ b/styles/mixins/_responsive.scss
@@ -1,11 +1,11 @@
 @mixin responsive($screen) {
-  @if ($screen == T) {
-    @media screen and (mix-width: $md-breakpoint) {
+  @if ($screen == 'T') {
+    @media screen and (min-width: $md-breakpoint) {
       @content;
     }
   }
-  @if ($screen == D) {
-    @media screen and (mix-width: $lg-breakpoint) {
+  @if ($screen == 'D') {
+    @media screen and (min-width: $lg-breakpoint) {
       @content;
     }
   }
