--- a/styles/layouts/_gnb.scss
+++ b/styles/layouts/_gnb.scss
@@ -3,18 +3,19 @@
   border-bottom: 1px solid $border;
 
   &-wrapper {
-    height: 50px;
     @include flexbox(between);
+    height: 50px;
   }
 
   &-right {
     .button-group {
       @include flexbox(end);
     }
+    .gnb-search-button {
+      margin-right: 4px;
+    }
   }
-  &-search-button {
-    margin-right: 4px;
-  }
+
   &-icon-button {
     @include flexbox;
     width: 32px;
@@ -37,6 +38,50 @@
       display: block;
       width: auto;
       height: 20px;
+    }
+  }
+
+  @include responsive(T) {
+    &-left {
+      @include flexbox(start);
+    }
+
+    &-right {
+      @include flexbox(end);
+      .button-group {
+        margin-right: 24px;
+
+        .gnb-icon-button {
+          margin-right: 8px;
+        }
+      }
+    }
+
+    &-wrapper {
+      height: 80px;
+    }
+
+    .logo {
+      position: static;
+      margin-right: 32px;
+      transform: none;
+      img {
+        height: 24px;
+      }
+    }
+    .btn-primary {
+      width: 88px;
+      i {
+        margin-left: 4px;
+      }
+    }
+  }
+  @include responsive(D) {
+    &-right {
+      .input-group {
+        width: 264px;
+        margin-right: 24px;
+      }
     }
   }
 }
