--- a/styles/layouts/_gnb.scss
+++ b/styles/layouts/_gnb.scss
@@ -1,4 +1,6 @@
 .gnb {
+  $padding: 8px;
+
   position: relative;
   border-bottom: 1px solid $border;
 
@@ -36,15 +38,31 @@
 
     &-right {
       @include flexbox(end);
+
       .button-group {
         margin-right: 24px;
 
         .gnb-icon-button {
           margin-right: 8px;
         }
+
+        .gnb-auth {
+          margin-left: 8px;
+          a {
+            @include text-style(14, $secondary);
+            font-weight: 700;
+
+            &:first-child {
+              margin-right: 12px;
+            }
+
+            &:hover {
+              color: $blue;
+            }
+          }
+        }
       }
     }
-
     &-wrapper {
       height: 80px;
     }
@@ -53,6 +71,10 @@
       position: static;
       margin-right: 32px;
       transform: none;
+      a {
+        padding: $padding;
+      }
+
       img {
         height: 24px;
       }
@@ -65,6 +87,10 @@
     }
   }
   @include responsive(D) {
+    .logo {
+      margin-right: 32px;
+    }
+
     &-right {
       .input-group {
         width: 264px;
