🐛 Show default user image when profile photo isn't present

--- a/styles/modules/_avatars.scss
+++ b/styles/modules/_avatars.scss
@@ -1,6 +1,10 @@
 %avatar-base {
   display: block;
   overflow: hidden;
+  background-image: url(/assets/images/img-user-default.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
   border-radius: 50%;
 
   img {
