--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,6 +24,8 @@
 
 @import './components/gnb-nav';
 @import './components/my-menu';
+@import './components/gnb-icon-buttons';
 
 @import './layouts/grids';
 @import './layouts/gnb';
+@import './layouts/sidebar';
