--- a/styles/layouts/_sidebar.scss
+++ b/styles/layouts/_sidebar.scss
@@ -15,8 +15,8 @@
 
       img {
         display: block;
-        height: 20px;
         width: auto;
+        height: 20px;
       }
     }
   }
@@ -26,15 +26,17 @@
     height: 88px;
     @include flexbox(start);
   }
+
   &-user {
     // padding: 32px 0;
 
     a {
       @include flexbox(start);
       @include text-style(14, $primary);
-      font-weight: 700;
       width: 100%;
+      font-weight: 700;
     }
+
     .avatar-24 {
       margin-right: 8px;
       flex-shrink: 0;
@@ -54,6 +56,34 @@
     padding: 24px 0;
     a {
       width: 84px;
+    }
+  }
+
+  &-nav {
+    .drawer-menu {
+      border-top: 1px solid $border;
+
+      &.is-expert {
+        border-bottom: 1px solid $border;
+      }
+    }
+  }
+
+  &-user-menu {
+    margin-top: 16px;
+
+    .user-menu-item {
+      a {
+        @include flexbox(start);
+        @include text-style(14, $primary);
+        width: 100%;
+        height: 36px;
+        padding: 0 12px;
+
+        &:active {
+          color: $blue;
+        }
+      }
     }
   }
 }
