--- a/styles/layouts/_search-modal.scss
+++ b/styles/layouts/_search-modal.scss
@@ -5,8 +5,12 @@
   z-index: $search-modal-level;
   width: 100%;
   height: 100vh;
-  background-color: $white;
   padding: 12px 0;
+  background-color: $white;
+
+  &-header {
+    margin-bottom: 20px;
+  }
 
   &-form {
     @include flexbox(between);
