--- a/styles/main.scss
+++ b/styles/main.scss
@@ -27,6 +27,7 @@
 @import './components/my-menu';
 @import './components/gnb-icon-buttons';
 @import './components/drawer-menu';
+@import './components/search-history';
 
 @import './layouts/grids';
 @import './layouts/gnb';
