--- a/styles/components/_search-history.scss
+++ b/styles/components/_search-history.scss
@@ -19,11 +19,17 @@
       width: 100%;
       height: 44px;
       padding: 0 8px;
+      font-weight: 400;
     }
   }
 
   &-item {
     position: relative;
+    border-radius: 2px;
+
+    &:hover {
+      background-color: $background;
+    }
 
     .word-button {
       @include text-style(16, $primary);
@@ -32,6 +38,7 @@
       font-weight: 400;
       text-align: left;
     }
+
     .delete-button {
       @include flexbox;
       position: absolute;
@@ -41,6 +48,10 @@
       height: $close-button-size;
       font-size: 16px;
       color: $tertiary;
+
+      &:hover {
+        color: $primary;
+      }
     }
   }
 }
