--- a/styles/layouts/_lnb.scss
+++ b/styles/layouts/_lnb.scss
@@ -1,6 +1,8 @@
 .lnb {
+  $lnb-link-padding: 8px;
+  $grid-margin: $sm-margin + $gutter / 2;
+
   overflow-x: auto;
-  border-bottom: 1px solid $border;
 
   &::-webkit-scrollbar {
     display: none;
@@ -8,9 +10,11 @@
 
   &-list {
     @include inline-flexbox;
-    position: relative;
-    left: -8px;
+    height: 40px;
+    padding: 0 ($grid-margin - $lnb-link-padding);
+    margin-left: -#{$grid-margin};
     white-space: nowrap;
+    border-bottom: 1px solid $border;
   }
 
   &-item {
@@ -25,17 +29,13 @@
       @include text-style(13, $dark);
       @include inline-flexbox;
       height: 40px;
-      padding: 0 8px;
+      padding: 0 $lnb-link-padding;
       font-weight: 700;
+      border-bottom: 2px solid transparent;
 
       &:hover {
         color: $blue;
       }
-    }
-
-    .ic-new {
-      font-size: 16px;
-      color: $red;
     }
   }
 }
