--- a/styles/components/_gnb-nav.scss
+++ b/styles/components/_gnb-nav.scss
@@ -3,6 +3,7 @@
 
   &-list {
     @include flexbox(start);
+    margin-left: 24px-#{$padding};
   }
 
   &-item {
@@ -24,7 +25,7 @@
       display: block;
       padding: $padding;
       font-weight: 700;
-      // background-color: hotpink;
+      white-space: nowrap;
     }
   }
 }
