--- a/styles/layouts/_lnb.scss
+++ b/styles/layouts/_lnb.scss
@@ -1,4 +1,7 @@
 .lnb {
+  $lnb-height-sm: 40px;
+  $lnb-height-md: 50px;
+
   $lnb-link-padding: 8px;
   $grid-margin: $sm-margin + $gutter / 2;
 
@@ -8,9 +11,9 @@
 
   &-list {
     @include inline-flexbox;
-    height: 40px;
-    padding: 0 ($grid-margin - $lnb-link-padding);
-    margin-left: -#{$grid-margin};
+    padding: 0 #{$grid-margin - $lnb-link-padding};
+    height: $lnb-height-sm;
+    margin-left: -$grid-margin;
     white-space: nowrap;
     border-bottom: 1px solid $border;
   }
@@ -24,15 +27,35 @@
     }
 
     a {
-      @include text-style(13, $dark);
       @include inline-flexbox;
-      height: 40px;
+      @include text-style(13, $dark);
+      height: $lnb-height-sm;
       padding: 0 $lnb-link-padding;
       font-weight: 700;
       border-bottom: 2px solid transparent;
 
       &:hover {
         color: $blue;
+      }
+    }
+  }
+
+  @include responsive(T) {
+    height: $lnb-height-md;
+    overflow-x: visible;
+    border-bottom: 1px solid $border;
+
+    &-list {
+      height: auto;
+      padding: 0;
+      margin-left: 0;
+      border-bottom: 0;
+    }
+
+    &-item {
+      a {
+        @include text-style(14);
+        height: $lnb-height-md;
       }
     }
   }
