--- a/styles/main.scss
+++ b/styles/main.scss
@@ -30,6 +30,7 @@
 @import './components/gnb-icon-buttons';
 @import './components/drawer-menu';
 @import './components/search-history';
+@import './components/breadcrumb';
 
 @import './layouts/grids';
 @import './layouts/gnb';
