--- a/styles/components/_product-carousel.scss
+++ b/styles/components/_product-carousel.scss
@@ -33,14 +33,60 @@
         opacity: 0.7;
         transition: transform 100ms ease-in-out, opacity 100ms ease-in-out;
       }
+
       img {
         display: none;
       }
     }
   }
+
   img {
+    display: block;
     width: 100%;
     height: auto;
-    display: block;
+  }
+
+  @include responsive(T) {
+    padding-right: 30px;
+
+    &-slider {
+      margin: 0 0 8px 0;
+      overflow: hidden;
+      border-radius: 4px;
+    }
+
+    &-thumbnail {
+      position: static;
+      transform: none;
+    }
+
+    .thumbnail-list {
+      justify-content: flex-start;
+    }
+
+    .thumbnail-item {
+      margin: 0 8px 0 0;
+
+      &.tns-nav-active {
+        button {
+          border: 2px solid $blue;
+          transform: none;
+        }
+      }
+
+      button {
+        @include flexbox(center);
+        width: 56px;
+        height: 56px;
+        border-radius: 4px;
+        opacity: 1;
+        overflow: hidden;
+      }
+
+      img {
+        display: block;
+        width: 56px;
+      }
+    }
   }
 }
