--- a/styles/main.scss
+++ b/styles/main.scss
@@ -15,6 +15,7 @@
 @import './mixins/positions';
 @import './mixins/flexbox';
 @import './mixins/scrollbar';
+@import './mixins/star-rating';
 
 @import './modules/tags';
 @import './modules/avatars';
@@ -32,6 +33,7 @@
 @import './components/search-history';
 @import './components/breadcrumb';
 @import './components/product-carousel';
+@import './components/product-info';
 
 @import './layouts/grids';
 @import './layouts/gnb';
