--- a/styles/components/_product-info.scss
+++ b/styles/components/_product-info.scss
@@ -23,7 +23,8 @@
       &-review {
         @include flexbox(start);
 
-        .star-rating-13 {
+        .star-rating {
+          @include star-rating(13px);
           margin-right: 8px;
         }
 
@@ -38,28 +39,24 @@
   &-price {
     margin-bottom: 16px;
 
-    .info-original-price {
-      @include flexbox(start);
+    .discount-rate {
+      @include inline-flexbox;
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 24px;
+      color: $blue;
 
-      .discount-rate {
-        @include inline-flexbox;
-        font-size: 20px;
-        line-height: 24px;
-        font-weight: 700;
-        color: $blue;
-
-        .rate {
-          font-family: $font-price;
-        }
-
-        .percent {
-          font-family: $font-main;
-        }
+      .rate {
+        font-family: $font-price;
       }
 
-      .price-off {
-        @include text-style(14, $secondary);
+      .percent {
+        font-family: $font-main;
       }
+    }
+
+    .price-off {
+      @include text-style(14, $secondary);
     }
 
     .info-sale-price {
@@ -71,7 +68,7 @@
       }
     }
 
-    .point {
+    .info-point {
       @include text-style(13, $secondary);
       font-weight: 400;
 
@@ -84,14 +81,86 @@
   }
 
   &-delivery {
+    @include text-style(16, $primary);
     padding-top: 12px;
     border-top: 1px solid $border;
+    font-weight: 400;
 
     span {
-      @include text-style(16, $primary);
       display: block;
       margin-bottom: 2px;
-      font-weight: 400;
+    }
+  }
+
+  @include responsive(T) {
+    // padding: 0;
+    margin: 0;
+
+    &-header {
+      .info {
+        &-brand {
+          display: inline-block;
+          margin-bottom: 8px;
+        }
+
+        &-title {
+          @include text-style(24);
+          margin-bottom: 8px;
+        }
+
+        &-review {
+          .star-rating {
+            font-size: 16px;
+          }
+
+          p {
+            strong {
+              margin-right: -3px;
+            }
+          }
+        }
+      }
+    }
+
+    &-price {
+      .info-price-wrapper {
+        @include flexbox(Start, end);
+        margin-bottom: 12px;
+      }
+      .discount-rate {
+        align-items: flex-end;
+        margin-right: 16px;
+        .rate {
+          font-size: 44px;
+          line-height: 36px;
+        }
+
+        .percent {
+          line-height: 1;
+        }
+      }
+
+      .info-sale-price {
+        margin-bottom: 0;
+
+        .price-32 {
+          margin-right: 8px;
+        }
+      }
+
+      .info-point {
+        margin-bottom: 20px;
+      }
+    }
+
+    &-delivery {
+      padding-top: 16px;
+      padding-bottom: 20px;
+      border-bottom: 1px solid $border;
+
+      span {
+        margin-bottom: 8px;
+      }
     }
   }
 }
