--- a/styles/components/_checkout-card.scss
+++ b/styles/components/_checkout-card.scss
@@ -17,12 +17,17 @@
     .delete-button {
       @include inline-flexbox;
       position: absolute;
-      width: 20px;
-      height: 20px;
       top: 8px;
       right: 8px;
-      color: $secondary;
+      width: 20px;
+      height: 20px;
       font-size: 20px;
+      color: $secondary;
+
+      &:hover,
+      &:active {
+        opacity: 0.4;
+      }
     }
   }
 
@@ -31,6 +36,16 @@
 
     .checkout-select {
       position: relative;
+
+      &:hover {
+        select {
+          border-color: $tertiary;
+        }
+
+        .ic-caret {
+          color: $secondary;
+        }
+      }
 
       select {
         @include text-style(14, $primary);
@@ -42,6 +57,7 @@
         border-radius: 3px;
         line-height: 1;
         appearance: none;
+        transition: border-color 100ms ease-in-out;
       }
 
       .ic-caret {
@@ -51,6 +67,7 @@
         font-size: 20px;
         color: $tertiary;
         pointer-events: none;
+        transition: color 100ms ease-in-out;
       }
     }
   }
