--- a/styles/components/_product-info.scss
+++ b/styles/components/_product-info.scss
@@ -1,5 +1,5 @@
 .product-info {
-  margin: 20px 0;
+  padding: 20px 0;
 
   &-header {
     margin-bottom: 16px;
@@ -93,8 +93,8 @@
   }
 
   @include responsive(T) {
-    // padding: 0;
-    margin: 0;
+    padding: 0;
+    margin-bottom: 40px;
 
     &-header {
       .info {
