--- a/styles/modules/_pagination.scss
+++ b/styles/modules/_pagination.scss
@@ -9,6 +9,7 @@
 
 .pagination {
   @include flexbox;
+
   .page-control {
     @extend %page-item-base;
     border: 1px solid $border;
@@ -56,7 +57,7 @@
     button {
       @extend %page-item-base;
       min-width: 26px;
-      padding: 0 4px;
+      padding: 0 4px 2px;
 
       &:hover {
         color: $blue;
