🚧  Handle private inquiry

--- a/styles/components/_product-inquiry.scss
+++ b/styles/components/_product-inquiry.scss
@@ -50,7 +50,14 @@
       font-weight: 700;
     }
     p {
+      @include flexbox(start);
       color: $primary;
+
+      i {
+        font-style: 16px;
+        margin-right: 8px;
+        color: $tertiary;
+      }
     }
   }
 
