--- a/styles/components/_product-inquiry.scss
+++ b/styles/components/_product-inquiry.scss
@@ -1,5 +1,6 @@
 .inquiry-card {
   margin-bottom: 40px;
+
   &-header {
     margin-bottom: 8px;
     @include text-style(12);
@@ -16,7 +17,7 @@
         }
       }
 
-      dd:last-child::after {
+      dd :last-child::after {
         content: none;
       }
     }
@@ -38,10 +39,15 @@
   &-body {
     @include text-style(13);
 
-    .question-content {
+    .inquiry-content {
       position: relative;
       padding-left: 20px;
+
+      &:first-child:not(:last-child) {
+        margin-bottom: 12px;
+      }
     }
+
     span {
       position: absolute;
       top: 0;
@@ -49,13 +55,27 @@
       color: $blue;
       font-weight: 700;
     }
+
+    .seller {
+      @include flexbox(start);
+      margin-bottom: 4px;
+
+      strong {
+        margin-right: 4px;
+      }
+
+      time {
+        @include text-style(12, $tertiary);
+      }
+    }
+
     p {
       @include flexbox(start);
       color: $primary;
 
       i {
-        font-style: 16px;
         margin-right: 8px;
+        font-style: 16px;
         color: $tertiary;
       }
     }
@@ -69,10 +89,21 @@
     &-body {
       @include text-style(14);
 
-      .question-content {
+      .inquiry-content {
         padding-left: 24px;
+
+        &:first-child:not(:last-child) {
+          margin-bottom: 16px;
+        }
       }
 
+      .seller {
+        margin-bottom: 8px;
+
+        strong {
+          @include text-style(16);
+        }
+      }
       span {
         @include text-style(16);
       }
