--- a/styles/components/_product-inquiry.scss
+++ b/styles/components/_product-inquiry.scss
@@ -1,112 +1,24 @@
-.inquiry-card {
-  margin-bottom: 40px;
+.product-inquiry {
+  @include mobile-only {
+    padding-bottom: 0;
 
-  &-header {
-    margin-bottom: 8px;
-    @include text-style(12);
-
-    .detail,
-    .misc {
-      @include flexbox(start);
-
-      dd,
-      strong {
-        &::after {
-          margin: 0 4px;
-          content: '|';
-        }
-      }
-
-      dd :last-child::after {
-        content: none;
-      }
-    }
-
-    .detail {
-      margin-bottom: 8px;
-      color: $primary;
-    }
-
-    .misc {
-      color: $tertiary;
-
-      strong {
-        font-weight: 400;
-      }
-    }
-  }
-
-  &-body {
-    @include text-style(13);
-
-    .inquiry-content {
-      position: relative;
-      padding-left: 20px;
-
-      &:first-child:not(:last-child) {
-        margin-bottom: 12px;
-      }
-    }
-
-    span {
-      position: absolute;
-      top: 0;
-      left: 0;
-      color: $blue;
-      font-weight: 700;
-    }
-
-    .seller {
-      @include flexbox(start);
-      margin-bottom: 4px;
-
-      strong {
-        margin-right: 4px;
-      }
-
-      time {
-        @include text-style(12, $tertiary);
-      }
-    }
-
-    p {
-      @include flexbox(start);
-      color: $primary;
-
-      i {
-        margin-right: 8px;
-        font-style: 16px;
-        color: $tertiary;
-      }
-    }
-  }
-
-  @include responsive(T) {
-    &-header {
+    &.is-open {
       padding-bottom: 20px;
+      .product-section-header .text-button,
+      .product-section-content {
+        display: block;
+      }
+
+      .product-section-header {
+        i {
+          display: none;
+        }
+      }
     }
 
-    &-body {
-      @include text-style(14);
-
-      .inquiry-content {
-        padding-left: 24px;
-
-        &:first-child:not(:last-child) {
-          margin-bottom: 16px;
-        }
-      }
-
-      .seller {
-        margin-bottom: 8px;
-
-        strong {
-          @include text-style(16);
-        }
-      }
-      span {
-        @include text-style(16);
-      }
+    .product-section-header .text-button,
+    .product-section-content {
+      display: none;
     }
   }
 }
