--- a/styles/main.scss
+++ b/styles/main.scss
@@ -47,6 +47,7 @@
 @import './components/product-review';
 @import './components/product-card';
 @import './components/product-inquiry';
+@import './components/product-shipment';
 
 @import './layouts/grids';
 @import './layouts/gnb';
