--- a/styles/main.scss
+++ b/styles/main.scss
@@ -48,6 +48,7 @@
 @import './components/product-card';
 @import './components/product-inquiry';
 @import './components/product-shipment';
+@import './components/product-recommendations';
 
 @import './layouts/grids';
 @import './layouts/gnb';
