--- a/styles/components/_product-recommendation.scss
+++ b/styles/components/_product-recommendation.scss
@@ -11,14 +11,41 @@
     &:nth-child(2) {
       margin-bottom: 20px;
     }
+
+    a {
+      display: block;
+
+      &:active {
+        img {
+          transform: scale(1.1);
+        }
+
+        .product-card-title {
+          opacity: 0.5;
+        }
+      }
+    }
   }
 
   @include responsive(T) {
     .product-item {
       width: calc(33.333% - 11px); //(100% - 32px) / 3
       margin-bottom: 0 !important;
+
       &:last-child {
         display: none;
+      }
+    }
+  }
+
+  @include responsive(D) {
+    .product-item a:hover {
+      img {
+        transform: scale(1.1);
+      }
+
+      .product-card-title {
+        opacity: 0.5;
       }
     }
   }
