--- a/styles/components/_product-recommendation.scss
+++ b/styles/components/_product-recommendation.scss
@@ -17,7 +17,7 @@
 
       &:active {
         img {
-          transform: scale(1.1);
+          transform: scale(1.1) translate(-50%, -50%);
         }
 
         .product-card-title {
@@ -41,7 +41,7 @@
   @include responsive(D) {
     .product-item a:hover {
       img {
-        transform: scale(1.1);
+        transform: scale(1.1) translate(-50%, -50%);
       }
 
       .product-card-title {
