🚧 Style order-form-modal

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -64,3 +64,5 @@
 @import './layouts/global-header';
 @import './layouts/global-footer';
 @import './layouts/product-tab';
+@import './layouts/order-cta';
+@import './layouts/order-form-modal';
