--- a/styles/layouts/_order-form-modal.scss
+++ b/styles/layouts/_order-form-modal.scss
@@ -5,19 +5,18 @@
   z-index: $order-form-modal-level;
   display: none;
   width: 100%;
+  max-height: 75vh;
+  overflow-y: auto;
   padding-top: 16px;
   background-color: $white;
   border-radius: 12px 12px 0 0;
   box-shadow: 0px -4px 20px rgba(0, 0, 0, 0.15);
+  overscroll-behavior: contain;
 
   &.is-open {
     display: block;
-    animation-name: modal-fade-in;
     animation-duration: 300ms;
-  }
-
-  .order-inputs {
-    margin-bottom: 8px;
+    animation-name: modal-fade-in;
   }
 
   .order-checkout {
@@ -25,12 +24,20 @@
   }
 
   .order-summary {
-    margin-bottom: 16px;
+    margin-bottom: 48px+ (4px * 2) + 16px;
+  }
+
+  .order-inputs {
+    margin-bottom: 8px;
   }
 
   .button-group {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     padding: 4px;
-    padding-top: 0;
+    background-color: $white;
   }
 
   @include responsive(T) {
